--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Remove old lockfile
         run: rm -f package-lock.json
 
-      - name: Install dependencies
-        run: npm install
+            - name: Install dependencies with legacy-peer-deps
+        run: npm install --legacy-peer-deps
+
 
       - name: Build project
         run: npm run build
