--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -9,20 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [22.x, 20.x, 18.x]
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: ${{ matrix.node-version }}
 
-      - name: Remove old lockfile
+      - name: Remove existing lockfile
         run: rm -f package-lock.json
 
-            - name: Install dependencies with legacy-peer-deps
+      - name: Install dependencies (ignore peer deps errors)
         run: npm install --legacy-peer-deps
 
-
-      - name: Build project
+      - name: Build the project
         run: npm run build
