--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/node": "^20",
