--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "googleapis": "^144.0.0",
+    "jszip": "^3.10.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
     "next": "14.2.3",
@@ -25,11 +26,11 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "jszip": "^3.10.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/jszip": "^3.4.2",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
