--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "googleapis": "^144.0.0",
+    "jszip": "^3.10.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
     "next": "14.2.3",
