--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.3",
     "next-themes": "latest",
     "nodemailer": "^6.9.13",
+    "@supabase/supabase-js": "^2.49.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
